# seo

./: .env.example  .gitignore  AI Agent Structure.md  ARCHITECTURE.md  BACKLINKS_PLAN.md  Database Design – Crawl Session.md  PRODUCTION.md  Partners_Site_List.xlsx  README.md  Web Crawler Engine.md  docker-compose.yml  pyproject.toml  pyrefly.toml  scaffold.py  term-insurance-heading-fixes.md  term-insurance-lighthouse-fixes.md  test.ipynb
.agent/rules/: Rules.md  rules.md
.design-ref/: README.md
.design-ref/chats/: chat1.md
.design-ref/project/: SEO Crawler Dashboard.html  app.jsx  charts.jsx  dashboard.jsx  data.js  icons.jsx  pages.jsx  shell.jsx
app/: config.py  dependencies.py  logging.py  main.py
app/api/: agents.py  health.py  stream.py
app/graph/: edges.py  master_graph.py  state.py
app/memory/: episodic.py  semantic.py  working.py
app/models/: embeddings.py  llm.py
app/observability/: audit.py  (+2 more)
backend/: Dockerfile  _crawl_progress.csv  inspect_crawl.py  manage.py  smoke_test_seo_ai.py  test_crawler.py  test_output.txt  verify_db.py
doc/: AGENTIC_FLOW.md  DATA_ACQUISITION.md  DATA_NORMALIZATION.md  INTELLIGENT_SYNTHESIS.md  INTENT_ROUTING.md  OUTPUT_GENERATION.md  README.md
docker/: Dockerfile  docker-compose.yml
docs/: AI Agent Structure.md  AUDIT_AGENT_PLAN.md  Crawling Strategies.md  Database Design – Crawl Session.md  PRODUCTION_READINESS_AUDIT.md  PROPOSED_CHANGES.md  SEO_AI_Agents_Plan.md  Web Crawler Engine.md
frontend/: README.md
llms_txt/: README.md  bajajlifeinsurance.com.sample.txt
scripts/: make_pricing_xlsx.py  setup.sh
(+600 files in other folders)
