[project]
name = "multi-agent-backend"
version = "0.1.0"
description = "Industrial-grade multi-agent AI backend using FastAPI and LangGraph"
authors = [{ name = "Antigravity", email = "ai@example.com" }]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "langgraph>=0.0.26",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "pydantic>=2.6.1",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "httpx>=0.26.0",
    "prometheus-client>=0.19.0",
    "langsmith>=0.1.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
